[package]
name = "prt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest ={ version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
